--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -98,11 +98,16 @@
     }
 
     #toast-container {
-        display: flex !important;
-        justify-content: center !important;
-        flex-direction: column !important;
+        bottom: 0;
  
       }
+
+    .btn {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
 
 
     @media only screen and (max-width: 992px){
