working on mobile responsiveness

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -129,7 +129,7 @@
 
     #grid-container {
         width: 95%;
-        height: 60%;
+        height: 80%;
     }
 
     font-size {
@@ -141,6 +141,42 @@
 
         color: grey;
     }
+}
+
+    @media only screen and (max-width: 600px) {
+        
+
+        .modal {
+            width: 90%;
+            max-height: 90%;
+        }
+    
+        html 
+        {
+            line-height: 1;
+            font-size: 12px;
+        }
+    
+        .row {
+            padding: 0;
+            margin-bottom: 0;
+        }
+    
+        #grid-container {
+            width: 95%;
+            height: 90%;
+        }
+    
+        font-size {
+            font-size: 12px;
+        }
+    
+        .select-wrapper input.select-dropdown {
+            font-size: 1rem;
+    
+            color: grey;
+        }
+
 }
 
   
