--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,6 +150,10 @@
             width: 90%;
             max-height: 90%;
         }
+
+        h2 {
+            font-size: 2.5rem;
+        }
     
         html 
         {
