--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,23 @@
     padding: 1rem;
 }
 
+#grid-container2 {
+    width: 50%;
+    margin: auto;
+    margin-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 5rem;
+    background-color: white;
+    position: relative;
+    border-top: 10px solid #21A06B;
+    padding: 1rem;
+    display: none;
+}
+
 .fade-block {
     background-color: black;
     height: 100%;
@@ -57,7 +74,13 @@
     }
 
     #modal1 {
-        border-left: #21A06B 6px solid;
+        border-top: #21A06B 6px solid;
+        border-bottom: #21A06B 6px solid;
+    }
+
+    #modal2 {
+        border-top: red 6px solid;
+        border-bottom: red 6px solid;
     }
 
     h4 {
@@ -85,7 +108,7 @@
         margin: auto;
     }
 
-    .modal-footer button {
+    button {
         background-color: #21A06B !important;
         color: white;
         font-weight: bold;
@@ -111,9 +134,10 @@
 
 
     @media only screen and (max-width: 992px){
-    .modal {
-        width: 90%;
+    #grid-container2 {
+        width: 95%;
         max-height: 90%;
+        overflow: auto;
     }
 
     html 
@@ -145,9 +169,10 @@
     @media only screen and (max-width: 600px) {
         
 
-        .modal {
-            width: 90%;
+        #grid-container2 {
+            width: 95%;
             max-height: 90%;
+            overflow: auto;
         }
 
         h2 {
