--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -281,5 +281,32 @@ button {
 
   }
 
+  @media only screen 
+    and (device-width : 414px) 
+    and (device-height : 736px) 
+    and (-webkit-device-pixel-ratio : 3) { 
+
+        #grid-container {
+            width: 95%;
+            height: 75%;
+            justify-content: normal;
+        }
+   
+        font-size {
+           font-size: 14px;
+       }
+   
+       h2 {
+           font-size: 2.75rem;
+       }
+       
+       html {
+           line-height: 1.5;
+           font-size: 14px;
+       }
+
+        
+    }
+
 
 
